--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -29,4 +29,4 @@ jobs:
         run:  chmod 600 aws.key
       - name: Run Ansible
         run: | 
-            ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i hosts.ini node.yml
+            ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i hosts.ini docker.yml
